<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_mapview">

    <fragment
        android:id="@+id/navigation_mapview"
        android:name="com.oc.go4lunch.ui.home.HomeFragment"
        android:label="@string/title_mapview"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_listview"
        android:name="com.oc.go4lunch.ui.dashboard.DashboardFragment"
        android:label="@string/title_listview"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_workmates"
        android:name="com.oc.go4lunch.ui.notifications.NotificationsFragment"
        android:label="@string/title_workmates"
        tools:layout="@layout/fragment_notifications" />
</navigation>