...
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/signin_between_buttons"
        app:layout_constraintStart_toStartOf="@+id/login_button_password"
        app:layout_constraintTop_toBottomOf="@+id/login_button_password" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_button_google"
        android:layout_width="@dimen/signin_button_length"
        android:layout_height="@dimen/signin_button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/signin_between_buttons"
        android:clickable="true"
        android:focusable="true"
...
